--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -958,13 +958,14 @@ h3{font-size:40px; text-shadow:none;font-weight: bold;}
 .new-ideas{
   background:$mlBlue; color: $mlWhite; text-shadow: none;border-radius:10px;padding: 20px 10px;margin-top:10%;
   img{width: 215px; margin-top: -130px;}
-h3{font-size:50px;}
+h3{font-size:29px;}
 p{margin-top:10px;}
 .ideabtn{display: inline-block; background: $mlRed; border: 0px; line-height: 27px; position: relative; text-decoration: none; font-size: 14px; height: 30px;  margin: 5px 0px 0px 0px;color: $mlWhite;text-shadow: none;text-align: center;padding:0px 10px}
 .ideabtn:after{position:absolute;right:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 0 15px 10px;border-color: transparent transparent transparent $mlRed;top: 0px;}
 .ideabtn:before{position:absolute;left:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 10px 15px 0px;border-color: transparent $mlRed transparent transparent;top: 0px;}
   /* h3{margin-top: 20px;} */
 }
+
 .new-ideas3{
   background:url(/images/myoffice3.png) $mlBlue no-repeat; color: $mlWhite; height: 250px; text-shadow: none; border-radius: 10px; padding: 10px 10px 0px 10px; margin-top: 10%; /* background-size: cover; */ background-position: center left;
   .subscription{background: rgb(255, 255, 255); border-radius: 10px; color: #000; padding: 0px 0 10px 0;
@@ -2450,5 +2451,4 @@ li.sameWorkTime:after {
     }
   }
 }
-
-
+.m_yellow{color: $mlYellow;}
