--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -103,7 +103,7 @@ html(prefix='og: http://ogp.me/ns#')
                 span.m_yel oo
                 span.m_red lya
                 | .global
-            .share-social
+            .share-social(style='color: #ef4647;')
               i.fa.fa-share-alt(aria-hidden='true')
             .ms_socialNetworks
               label share your public profile
