--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -113,7 +113,7 @@ html(prefix='og: http://ogp.me/ns#')
                   a(href='#' rel='nofollow' onclick='facebookShare("' + currentUrl + '",this)')
                     i.fa.fa-facebook(aria-hidden='true')
                 li
-                  a.customer.share(href='http://www.twitter.com/intent/tweet?url=' + currentUrl + '', title='Twitter share' rel='nofollow')
+                  a.customer.share(href='http://www.twitter.com/intent/tweet?text='+defaultTextShare+' Thank You, '+ displayName +'&url=' + currentUrl + '', title='Twitter share' rel='nofollow')
                     i.fa.fa-twitter(aria-hidden='true')
                 li
                   a.customer.share(href='https://www.linkedin.com/shareArticle?mini=true&url=' + currentUrl + '' rel='nofollow')
@@ -377,7 +377,7 @@ html(prefix='og: http://ogp.me/ns#')
                 display: 'popup',
                 href: linkName,
               }, function (response) {
-                console.log(response);
+                //console.log(response);
               });
             }
           script.
