--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -110,7 +110,7 @@ html(prefix='og: http://ogp.me/ns#')
               label share your public profile
               ul
                 li
-                  a(href='#' rel='nofollow' onclick='facebookShare("' + currentUrl + '",this)')
+                  a(href='#' rel='nofollow' onclick='facebookShare("'+defaultTextShare+' Thank You, '+ displayName+'","'+ currentUrl + '",this)')
                     i.fa.fa-facebook(aria-hidden='true')
                 li
                   a.customer.share(href='http://www.twitter.com/intent/tweet?text='+defaultTextShare+' Thank You, '+ displayName +'&url=' + currentUrl + '', title='Twitter share' rel='nofollow')
@@ -371,11 +371,12 @@ html(prefix='og: http://ogp.me/ns#')
               $('.' + linkName).css('display', 'block')
             }
 
-            var facebookShare = function (linkName, event) {
+            var facebookShare = function (defaultShareText,linkName, event) {
               FB.ui({
                 method: 'share',
                 display: 'popup',
                 href: linkName,
+                quote:defaultShareText
               }, function (response) {
                 //console.log(response);
               });
