--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -1145,7 +1145,7 @@ textarea.comment-input-box{border: 2px solid #ddd; border-radius: 4px; margin-bo
 .upload-image img{width:100%;height: 100%;}
 
 .see-more{color:#fff;font-size:12px;cursor:pointer;text-decoration:none;background:#273545;padding:4px 6px;margin: -4px 0 0 10px; border-radius:4px;text-shadow:none;font-weight: normal;}
-.library-wrap .thumbnail{float:left;width:120px;height:120px;margin:4px 10px 4px 4px;position:relative;padding:0;}
+.library-wrap .thumbnail{float:left;width:120px !important;height:120px;margin:4px 10px 4px 4px;position:relative;padding:0;}
 .library-wrap .thumbnail .thumbnail_new_actions{margin: 0px;padding: 0px;}
 .library-wrap .thumbnail .thumbnail_new_actions li{display: block;}
 .library-wrap .thumbnail .thumbnail_new_actions .fa.fa-lock{ margin-right: 5px; font-size: 12px;position:static;color:#fff;background:transparent;width:auto;height:auto;text-align:center;line-height:normal;border-radius:0%;cursor:pointer}
@@ -1225,6 +1225,7 @@ textarea.comment-input-box{border: 2px solid #ddd; border-radius: 4px; margin-bo
 .clusterMarker{position: absolute; cursor: pointer; width: 40px; height: 40px; left: -20px; top: -20px; border: 5px  solid #ef4647; border-radius: 50%; background-color: white; text-align: center; color: #333; font-size: 14px; font-weight: bold; display: flex; align-items: center; justify-content: center; }
 .date-pick-wrap .rdtPicker{bottom:20%;}
 .rdtPicker{ position: fixed !important;}
+.step_form_wrap .rdtPicker{ position: absolute !important;}
 /*.moolya_admin .react-bs-container-body{overflow:hidden;}*/
 /*.react-bs-container-body {position:relative !important;}*/
 
