--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -86,6 +86,7 @@ html(prefix='og: http://ogp.me/ns#')
       }(document, 'script', 'facebook-jssdk'));
 
     script(type = 'in/Login').
+    .mask(style='display: none;')
     .ms_main_wrap
       .ms_header
         .header_left
@@ -103,16 +104,16 @@ html(prefix='og: http://ogp.me/ns#')
                 span.m_yel oo
                 span.m_red lya
                 | .global
-            .share-social
+            .share-social(style='color: #ef4647;')
               i.fa.fa-share-alt(aria-hidden='true')
             .ms_socialNetworks
               label share your public profile
               ul
                 li
-                  a(href='#' rel='nofollow' onclick='facebookShare("' + currentUrl + '",this)')
+                  a(href='#' rel='nofollow' onclick='facebookShare("'+defaultTextShare+' Thank You, '+ displayName+'","'+ currentUrl + '",this)')
                     i.fa.fa-facebook(aria-hidden='true')
                 li
-                  a.customer.share(href='http://www.twitter.com/intent/tweet?url=' + currentUrl + '', title='Twitter share' rel='nofollow')
+                  a.customer.share(href='http://www.twitter.com/intent/tweet?text='+defaultTextShare+' Thank You, '+ displayName +'&url=' + currentUrl + '', title='Twitter share' rel='nofollow')
                     i.fa.fa-twitter(aria-hidden='true')
                 li
                   a.customer.share(href='https://www.linkedin.com/shareArticle?mini=true&url=' + currentUrl + '' rel='nofollow')
@@ -344,8 +345,14 @@ html(prefix='og: http://ogp.me/ns#')
           script.
             $(document).ready(function () {
               $(".share-social").click(function () {
-                $(".ms_socialNetworks").slideToggle();
-              });
+                  $(".ms_socialNetworks").slideToggle();
+                  $(".mask").toggle();
+                });
+                $(".mask").click(function(){
+                  $(".ms_socialNetworks").slideUp();
+                  $(this).hide();
+                });
+                $(".share-social").click();
               $(".ms_socialNetworks li").click(function () {
                 $(".ms_socialNetworks li").removeClass("active");
                 $(this).toggleClass("active");
@@ -364,13 +371,14 @@ html(prefix='og: http://ogp.me/ns#')
               $('.' + linkName).css('display', 'block')
             }
 
-            var facebookShare = function (linkName, event) {
+            var facebookShare = function (defaultShareText,linkName, event) {
               FB.ui({
                 method: 'share',
                 display: 'popup',
                 href: linkName,
+                quote:defaultShareText
               }, function (response) {
-                console.log(response);
+                //console.log(response);
               });
             }
           script.
