--- a/public/css/ms_styles.css
+++ b/public/css/ms_styles.css
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6{font-family:'DINPro-Regular';font-weight:400}
 .header_right .ms_social_wrap .ms_socialNetworks ul li{display:inline-block;padding:0 5px}
 .header_right .ms_social_wrap .ms_socialNetworks ul li a{font-size:18px;color:#6f6854}
 .header_right .ms_social_wrap .ms_socialNetworks ul li a:hover{color:#ef4647}
-.share-social{display:inline-block;float:left;padding:0 20px 0 0;font-size:28px;line-height:60px}
+.share-social{display:inline-block;float:left;padding:0 20px 0 0;font-size:35px;line-height:60px}
 .share-url{clear:both;margin:10px;overflow:hidden}
 .share-url .ms_btn_re{float:left;margin-top:4px;margin-right:20px;height:30px;line-height:30px; min-width: 50px;}
 .share-url .ms_btn_re:before{border-width:15px 12px 15px 0}
@@ -85,3 +85,12 @@ h1,h2,h3,h4,h5,h6{font-family:'DINPro-Regular';font-weight:400}
 .ms_socialNetworks:after{bottom:100%;border:solid transparent;content:" ";height:0;width:0;position:absolute;pointer-events:none;border-color:rgba(136,183,213,0);border-bottom-color:#ef4647;border-width:10px;margin-left:-10px;right:13px}
 
 .ms_content .pageKeywords span {display: inline-block; background: #F5F5F5; border: 1px solid #ddd; padding: 2px 4px; border-left: 2px solid #EF4647; border-radius: 0 4px 4px 0; margin-right: 8px; margin-bottom: 8px;}
+.mask {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background: rgba(0,0,0,0);
+    left: 0;
+    top: 0;
+    z-index: 9;
+    }
