--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -1672,3 +1672,4 @@ margin: 0px;
 .upload_lock{position: absolute;left: -106px;top: 18px;z-index: 999;}
 .reg_payment{position: absolute;text-align: center;top: 50%;left: 50%;transform: translate(-50%,-50%);}
 
+.ml_pink {background-color: #f48794 !important}
